# agnitha-project

./: README.md  pyproject.toml
output_files/: biotech-drugs.csv  covid-19.csv
src/get_papers_list/: get_papers_list.py
